--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ToDo</title>
+    <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>To Do List</h1>
+        <form>
+            <input type="text" id="input" placeholder="ToDoを追加">
+            <input type="button" id="btn" value="追加">
+        </form>
+        <ul class="todo-list">
+            <!-- ここに要素が追加されていく -->
+        </ul>
+</div>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="./assets/js/main.js"></script>
 </body>
 </html>
